--- a/po/cs.po
+++ b/po/cs.po
@@ -3,8 +3,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: POEditor.com\n"
 "Project-Id-Version: Wike\n"
+"Last-Translator: Šimon Rataj <ratajs@ratajs.cz>\n"
 "Language: cs\n"
 
 #: ../src/view.py:154
@@ -56,18 +56,20 @@ msgstr "Návrhy při hledání"
 msgid "Search and read Wikipedia articles\n"
 "All content from Wikipedia.org\n"
 "and available under CC BY-SA 3.0 unless otherwise noted"
-msgstr ""
+msgstr "Prohledávejte a čtěte články na Wikipedii\n"
+"Veškerý obsah na Wikipedia.org\n"
+"je dostupný pod licencí CC BY-SA 3.0, pokud není uvedeno jinak"
 
 #. Add your name like this:
-#. 
+#.
 #. Hugo Olabera <hugolabe@gmail.com>
 #: ../data/ui/about.ui:13
 msgid "translator-credits"
-msgstr "Šimon Rataj <https://github.com/ratajs>"
+msgstr "Šimon Rataj <ratajs@ratajs.cz>"
 
 #: ../data/ui/bookmarks.ui:58
 msgid "Add Bookmark"
-msgstr "Uložit záložku"
+msgstr "Přidat do záložek"
 
 #: ../data/ui/shortcuts.ui:14
 msgctxt "shortcut window"
@@ -167,7 +169,7 @@ msgstr "Zobrazit uložené záložky"
 #: ../data/ui/shortcuts.ui:149
 msgctxt "shortcut window"
 msgid "Add bookmark"
-msgstr "Uložit záložku"
+msgstr "Přidat do záložek"
 
 #: ../src/prefs.py:81 ../data/ui/menu.ui:8
 msgid "Wikipedia Main Page"
@@ -415,7 +417,7 @@ msgid "<b>No Bookmarks</b>\n"
 "to add bookmarks to the list</small>"
 msgstr "<b>Žádné uložené záložky</b>\n"
 "\n"
-"<small>Použijte tlačítko <i>Uložit záložku</i>\n"
+"<small>Použijte tlačítko <i>Přidat do záložek</i>\n"
 "nebo stiskněte prostřední tlačítko myši\n"
 "pro uložení stránky mezi záložky</small>"
 
@@ -447,4 +449,81 @@ msgstr "Zrušit výběr"
 msgctxt "shortcut window"
 msgid "Main menu"
 msgstr "Hlavní nabídka"
+
+#: ../src/view.py:204
+msgid "Click the search button or press F2 to search articles in Wikipedia. You can also use the main menu to open Wikipedia main page, the list of recent articles or get a random article."
+msgstr "Prohledávejte články na Wikipedii pomocí tlačítka vyhledávání nebo klávesy F2. Můžete také použít hlavní nabídku k otevření hlavní stránky Wikipedie, seznamu nedávných článků nebo náhodného článku."
+
+#: ../src/bookmarks.py:47
+msgid "<b>No Bookmarks</b>\n"
+"\n"
+"<small>Use the <i>Add Bookmark</i> button\n"
+"or press Ctrl+D to add\n"
+"the current article to the list</small>"
+msgstr "<b>Žádné záložky</b>\n"
+"\n"
+"<small>Otevřený článek přidáte\n"
+"tlačítkem <i>Přidat do záložek</i>\n"
+"nebo klávesovou zkratkou Ctrl+D</small>"
+
+#: ../data/ui/shortcuts.ui:96
+msgctxt "shortcut window"
+msgid "Tabs"
+msgstr "Karty"
+
+#: ../data/ui/shortcuts.ui:100
+msgctxt "shortcut window"
+msgid "New tab"
+msgstr "Nová karta"
+
+#: ../data/ui/shortcuts.ui:107
+msgctxt "shortcut window"
+msgid "Close current tab"
+msgstr "Zavřít otevřenou kartu"
+
+#: ../data/ui/shortcuts.ui:114
+msgctxt "shortcut window"
+msgid "Next tab"
+msgstr "Další karta"
+
+#: ../data/ui/shortcuts.ui:121
+msgctxt "shortcut window"
+msgid "Previous tab"
+msgstr "Předchozí karta"
+
+#: ../data/ui/header.ui:61
+msgid "New tab"
+msgstr "Nová karta"
+
+#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:20
+msgid "Open multiple articles in tabs"
+msgstr "Můžete otevřít více článků v kartách"
+
+#: ../src/view.py:417
+msgid "Open Link in New Tab"
+msgstr "Otevřít odkaz v nové kartě"
+
+#: ../src/view.py:423
+msgid "Add Link to Bookmarks"
+msgstr "Přidat odkaz do záložek"
+
+#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:29
+msgid "Light, dark and sepia themes"
+msgstr "Světlý, tmavý a sépiový motiv"
+
+#: ../src/view.py:419
+msgid "Open Link in Browser"
+msgstr "Otevřít odkaz v prohlížeči"
+
+#: ../src/view.py:425
+msgid "Copy Link to Clipboard"
+msgstr "Zkopírovat odkaz do schránky"
+
+#: ../data/ui/prefs.ui:110
+msgid "Desktop searches are performed in the default language"
+msgstr "Toto hledání bude prováděno ve výchozím jazyce"
+
+#: ../data/ui/prefs.ui:111
+msgid "You can search in other languages ​​using a prefix. Eg. -es to search in Spanish"
+msgstr "Můžete hledat i v jiných jazycích pomocí prefixů. Např. -es pro hledání ve španělštině"
 
