--- a/data/languages/languages.json
+++ b/data/languages/languages.json
@@ -5,20 +5,26 @@
 "af": "Afrikaans",
 "ak": "Akan",
 "als": "Alemannisch",
+"alt": "\u0430\u043B\u0442\u0430\u0439 \u0442\u0438\u043B",
 "am": "\u12a0\u121b\u122d\u129b",
+"ami": "Pangcah",
 "an": "Aragon\u00e9s",
 "ang": "\u00c6nglisc",
 "ar": "\u0627\u0644\u0639\u0631\u0628\u064a\u0629",
 "arc": "\u0710\u072a\u0721\u071d\u0710",
+"ary": "\u0627\u0644\u062F\u0627\u0631\u062C\u0629",
 "arz": "\u0645\u0635\u0631\u0649",
 "as": "\u0985\u09b8\u09ae\u09c0\u09af\u09bc\u09be",
 "ast": "Asturianu",
 "atj": "Atikamekw",
 "av": "\u0410\u0432\u0430\u0440",
+"avk": "Kotava",
+"awa": "\u0905\u0935\u0927\u0940",
 "ay": "Aymar aru",
 "az": "Az\u0259rbaycanca",
 "azb": "\u062a\u06c6\u0631\u06a9\u062c\u0647",
 "ba": "\u0411\u0430\u0448\u04a1\u043e\u0440\u0442\u0441\u0430",
+"ban": "Basa Bali",
 "bar": "Boarisch",
 "bat-smg": "\u017demait\u0117\u0161ka",
 "bcl": "Bikol central",
@@ -54,6 +60,7 @@
 "cv": "\u0427\u04d1\u0432\u0430\u0448\u043b\u0430",
 "cy": "Cymraeg",
 "da": "Dansk",
+"dag": "Dagbanli",
 "de": "Deutsch",
 "din": "Thu\u0254\u014bj\u00e4\u014b",
 "diq": "Zazaki",
@@ -84,6 +91,7 @@
 "ga": "Gaeilge",
 "gag": "Gagauz",
 "gan": "\u8d1b\u8a9e",
+"gcr": "Kriy\u00F2l gwiyannen",
 "gd": "G\u00e0idhlig",
 "gl": "Galego",
 "glk": "\u06af\u06cc\u0644\u06a9\u06cc",
@@ -92,6 +100,7 @@
 "gor": "Bahasa hulontalo",
 "got": "\ud800\udf32\ud800\udf3f\ud800\udf44\ud800\udf39\ud800\udf43\ud800\udf3a",
 "gu": "\u0a97\u0ac1\u0a9c\u0ab0\u0abe\u0aa4\u0ac0",
+"guw": "Gungbe",
 "gv": "Gaelg",
 "ha": "Hausa",
 "hak": "\u5ba2\u5bb6\u8a9e/hak-k\u00e2-ng\u00ee",
@@ -104,6 +113,7 @@
 "ht": "Krey\u00f2l ayisyen",
 "hu": "Magyar",
 "hy": "\u0540\u0561\u0575\u0565\u0580\u0565\u0576",
+"hyw": "\u0531\u0580\u0565\u0582\u0574\u057F\u0561\u0570\u0561\u0575\u0565\u0580\u0567\u0576",
 "ia": "Interlingua",
 "id": "Bahasa indonesia",
 "ie": "Interlingue",
@@ -148,13 +158,14 @@
 "lg": "Luganda",
 "li": "Limburgs",
 "lij": "Ligure",
+"lld": "Ladin",
 "lmo": "Lumbaart",
 "ln": "Ling\u00e1la",
 "lo": "\u0ea5\u0eb2\u0ea7",
-"lrc": "\u0644\u06ca\u0631\u06cc \u0634\u0648\u0645\u0627\u0644\u06cc",
 "lt": "Lietuvi\u0173",
 "ltg": "Latga\u013cu",
 "lv": "Latvie\u0161u",
+"mad": "Madhur\u00E2",
 "mai": "\u092e\u0948\u0925\u093f\u0932\u0940",
 "map-bms": "Basa banyumasan",
 "mdf": "\u041c\u043e\u043a\u0448\u0435\u043d\u044c",
@@ -165,6 +176,7 @@
 "mk": "\u041c\u0430\u043a\u0435\u0434\u043e\u043d\u0441\u043a\u0438",
 "ml": "\u0d2e\u0d32\u0d2f\u0d3e\u0d33\u0d02",
 "mn": "\u041c\u043e\u043d\u0433\u043e\u043b",
+"mnw": "\u1018\u102C\u101E\u102C \u1019\u1014\u103A",
 "mr": "\u092e\u0930\u093e\u0920\u0940",
 "mrj": "\u041a\u044b\u0440\u044b\u043a \u043c\u0430\u0440\u044b",
 "ms": "Bahasa melayu",
@@ -180,10 +192,12 @@
 "nds-nl": "Nedersaksies",
 "ne": "\u0928\u0947\u092a\u093e\u0932\u0940",
 "new": "\u0928\u0947\u092a\u093e\u0932 \u092d\u093e\u0937\u093e",
+"nia": "Li Niha",
 "nl": "Nederlands",
 "nn": "Norsk nynorsk",
 "no": "Norsk",
 "nov": "Novial",
+"nqo": "\u07D2\u07DE\u07CF",
 "nrm": "Nouormand",
 "nso": "Sesotho sa leboa",
 "nv": "Din\u00e9 bizaad",
@@ -208,6 +222,7 @@
 "pnt": "\u03a0\u03bf\u03bd\u03c4\u03b9\u03b1\u03ba\u03ac",
 "ps": "\u067e\u069a\u062a\u0648",
 "pt": "Portugu\u00eas",
+"pwn": "Pinayuanan",
 "qu": "Runa simi",
 "rm": "Rumantsch",
 "rmy": "Romani",
@@ -228,12 +243,15 @@
 "se": "Davvis\u00e1megiella",
 "sg": "S\u00e4ng\u00f6",
 "sh": "Srpskohrvatski / \u0441\u0440\u043f\u0441\u043a\u043e\u0445\u0440\u0432\u0430\u0442\u0441\u043a\u0438",
+"shi": "Tacl\u1E25it",
 "shn": "\u107d\u1083\u1087\u101e\u1083\u1087\u1010\u1086\u1038 ",
 "si": "\u0dc3\u0dd2\u0d82\u0dc4\u0dbd",
 "simple": "Simple english",
 "sk": "Sloven\u010dina",
+"skr": "\u0633\u0631\u0627\u0626\u06CC\u06A9\u06CC",
 "sl": "Sloven\u0161\u010dina",
 "sm": "Gagana samoa",
+"smn": "Anar\u00E2\u0161kiel\u00E2",
 "sn": "Chishona",
 "so": "Soomaaliga",
 "sq": "Shqip",
@@ -246,7 +264,9 @@
 "sv": "Svenska",
 "sw": "Kiswahili",
 "szl": "\u015al\u016fnski",
+"szy": "Sakizaya",
 "ta": "\u0ba4\u0bae\u0bbf\u0bb4\u0bcd",
+"tay": "Tayal",
 "tcy": "\u0ca4\u0cc1\u0cb3\u0cc1",
 "te": "\u0c24\u0c46\u0c32\u0c41\u0c17\u0c41",
 "tet": "Tetun",
@@ -259,6 +279,7 @@
 "to": "Lea faka-tonga",
 "tpi": "Tok pisin",
 "tr": "T\u00fcrk\u00e7e",
+"trv": "Seediq",
 "ts": "Xitsonga",
 "tt": "\u0422\u0430\u0442\u0430\u0440\u0447\u0430/tatar\u00e7a",
 "tum": "Chitumbuka",
