--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+wike (1.8.1) focal; urgency=medium
+
+  * Translations
+
 wike (1.8.0) focal; urgency=medium
 
   * New release with system theme support
