--- a/po/tr.po
+++ b/po/tr.po
@@ -17,7 +17,7 @@ msgstr "İstenen arama için herhangi bir sonuç bulamadı"
 
 #: ../src/view.py:211 ../src/view.py:297
 msgid "Can't access Wikipedia"
-msgstr "Vikipedi'ye erişilemiyor"
+msgstr "Wikipedia'ya erişilemiyor"
 
 #: ../src/view.py:212
 msgid "Check your Internet connection and try again"
@@ -25,11 +25,11 @@ msgstr "İnternet bağlantınızı kontrol edin ve tekrar deneyin"
 
 #: ../src/window.py:225 ../src/page.py:115
 msgid "New bookmark: "
-msgstr "Yeni yerimi: "
+msgstr "Yeni yer imi: "
 
 #: ../src/window.py:283
 msgid "Wikipedia URL copied to clipboard"
-msgstr "Vikipedi Bağlantısı panoya kopyalandı"
+msgstr "Wikipedia bağlantısı panoya kopyalandı"
 
 #: ../src/search.py:259
 msgid "Default search language: "
@@ -37,11 +37,11 @@ msgstr "Varsayılan arama dili: "
 
 #: ../src/bookmarks.py:138
 msgid "Clear Bookmarks List?"
-msgstr "Yerimi Listesini Temizle?"
+msgstr "Yer İmleri Listesi Temizlensin Mi?"
 
 #: ../src/bookmarks.py:140
 msgid "All bookmarks in the list will be removed permanently."
-msgstr "Listedeki tüm yerimleri kalıcı olarak silinecek."
+msgstr "Listedeki tüm yer imleri kalıcı olarak kaldırılacak."
 
 #: ../src/bookmarks.py:141 ../data/ui/bookmarks.ui:70
 msgid "Clear List"
@@ -56,8 +56,8 @@ msgstr "Arama Önerilenleri"
 msgid "Search and read Wikipedia articles\n"
 "All content from Wikipedia.org\n"
 "and available under CC BY-SA 3.0 unless otherwise noted"
-msgstr "Vikipedi makalelerini arayın ve okuyun\n"
-"Tüm içerikler Wikipedia.org\n"
+msgstr "Wikipedia makalelerini arayın ve okuyun\n"
+"Tüm içerikler Wikipedia.org sitesinden olup\n"
 "ve aksi belirtilmediği sürece CC BY-SA 3.0 kapsamında kullanılabilir"
 
 #. Add your name like this:
@@ -65,11 +65,12 @@ msgstr "Vikipedi makalelerini arayın ve okuyun\n"
 #. Hugo Olabera <hugolabe@gmail.com>
 #: ../data/ui/about.ui:13
 msgid "translator-credits"
-msgstr "translator-credits"
+msgstr "Ümit Solmaz\n"
+"Sabri Ünal <libreajans@gmail.com>"
 
 #: ../src/view.py:402 ../data/ui/bookmarks.ui:58
 msgid "Add Bookmark"
-msgstr "Yerimi Ekle"
+msgstr "Yer İmi Ekle"
 
 #: ../data/ui/shortcuts.ui:14
 msgctxt "shortcut window"
@@ -99,7 +100,7 @@ msgstr "Tercihler"
 #: ../data/ui/shortcuts.ui:53
 msgctxt "shortcut window"
 msgid "Copy Wikipedia URL"
-msgstr "Vikipedi Bağlantısını Kopyala"
+msgstr "Wikipedia Bağlantısını Kopyala"
 
 #: ../data/ui/shortcuts.ui:60
 msgctxt "shortcut window"
@@ -124,7 +125,7 @@ msgstr "Makale ara"
 #: ../data/ui/shortcuts.ui:141
 msgctxt "shortcut window"
 msgid "Wikipedia main page"
-msgstr "Vikipedi ana sayfa"
+msgstr "Wikipedia ana sayfası"
 
 #: ../data/ui/shortcuts.ui:148
 msgctxt "shortcut window"
@@ -149,21 +150,21 @@ msgstr "Sayfayı yeniden yükle"
 #: ../data/ui/shortcuts.ui:76
 msgctxt "shortcut window"
 msgid "Bookmarks"
-msgstr "Yerimleri"
+msgstr "Yer imleri"
 
 #: ../data/ui/shortcuts.ui:80
 msgctxt "shortcut window"
 msgid "Show bookmarks"
-msgstr "Yerimlerini göster"
+msgstr "Yer imlerini göster"
 
 #: ../data/ui/shortcuts.ui:87
 msgctxt "shortcut window"
 msgid "Add bookmark"
-msgstr "Yerimi ekle"
+msgstr "Yer imi ekle"
 
 #: ../src/prefs.py:80 ../data/ui/menu.ui:101
 msgid "Wikipedia Main Page"
-msgstr "Vikipedi Anasayfa"
+msgstr "Wikipedia Ana Sayfası"
 
 #: ../src/view.py:293 ../data/ui/menu.ui:127
 msgid "Recent Articles"
@@ -175,11 +176,11 @@ msgstr "Sayfadaki metni Ara"
 
 #: ../data/ui/menu.ui:164
 msgid "Open Wikipedia Page in Browser"
-msgstr "Vikipedi sayfasını tarayıcıda aç"
+msgstr "Wikipedia sayfasını tarayıcıda aç"
 
 #: ../data/ui/menu.ui:177
 msgid "Copy Wikipedia URL to Clipboard"
-msgstr "Vikipedi bağlantısını panoya kopyala"
+msgstr "Wikipedia bağlantısını panoya kopyala"
 
 #: ../data/ui/menu.ui:201
 msgid "Preferences"
@@ -199,7 +200,7 @@ msgstr "Davranış"
 
 #: ../data/ui/prefs.ui:126
 msgid "Keep a list of recent articles"
-msgstr "Son makalelerin bir listesini tut"
+msgstr "Son makalelerin listesini tut"
 
 #: ../data/ui/prefs.ui:14
 msgid "General"
@@ -222,16 +223,16 @@ msgstr "Wike"
 #: ../src/view.py:203 ../data/com.github.hugolabe.Wike.desktop.in:4
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:8
 msgid "Search and read Wikipedia articles"
-msgstr "Vikipedi makalelerini arayın ve okuyun"
+msgstr "Wikipedia makalelerini arayın ve okuyun"
 
 #. Don't remove semicolons!
 #: ../data/com.github.hugolabe.Wike.desktop.in:10
 msgid "Wikipedia;Encyclopedia;"
-msgstr "Vikipedi;Ansiklopedi;"
+msgstr "Wikipedia;Wikipedi;Vikipedi;Ansiklopedi;"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:11
 msgid "Wike is a Wikipedia reader for the GNOME Desktop. Provides access to all the content of this online encyclopedia in a native application, with a simpler and distraction-free view of articles."
-msgstr "Wike, GNOME Masaüstü için bir Vikipedi okuyucusu. Bu çevrimiçi ansiklopedinin tüm içeriğine, makalelerin daha basit ve dikkat dağıtıcı olmayan bir görünümü ile yerel bir uygulamada erişimi sağlar."
+msgstr "Wike, GNOME Masaüstü için Wikipedia okuyucusudur. Çevrimiçi ansiklopedinin tüm içeriğine, makalelerin daha basit ve dikkat dağıtıcı olmayan görünümü ile yerel uygulama ile erişimeyi sağlar."
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:21
 msgid "Multiple languages"
@@ -243,7 +244,7 @@ msgstr "Son makalelerin listesi"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:24
 msgid "Simple bookmarks management"
-msgstr "Basit yerimleri yönetimi"
+msgstr "Basit yer imleri yönetimi"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:25
 msgid "Text search in articles"
@@ -263,11 +264,11 @@ msgstr "Özellikler:"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:28
 msgid "GNOME Shell search integration"
-msgstr "GNOME Shell arama birleştirme"
+msgstr "GNOME Shell arama tümleşimi"
 
 #: ../src/prefs.py:148
 msgid "Clear Historic?"
-msgstr "Geçmişi Temizle?"
+msgstr "Geçmiş Temizlensin Mi?"
 
 #: ../src/prefs.py:150
 msgid "The history of visited articles will be deleted permanently."
@@ -279,7 +280,7 @@ msgstr "Geçmişi Temizle"
 
 #: ../src/prefs.py:168
 msgid "Clear Personal Data?"
-msgstr "Kişisel Verileri Temizle?"
+msgstr "Kişisel Veriler Temizlensin Mi?"
 
 #: ../src/prefs.py:170
 msgid "Cookies and cache data will be deleted permanently."
@@ -287,12 +288,12 @@ msgstr "Çerezler ve önbellek verileri kalıcı olarak silinir."
 
 #: ../src/prefs.py:171
 msgid "Clear Data"
-msgstr "Veriyi Temizle"
+msgstr "Verileri Temizle"
 
 #. Don't remove %s tag!
 #: ../src/wike-sp.in:84
 msgid "Search “%s” on Wikipedia"
-msgstr "Vikipedi «%s» içinde Ara"
+msgstr "Wikipedia içinde “%s” ara"
 
 #: ../data/ui/prefs.ui:23
 msgid "Home page"
@@ -328,7 +329,7 @@ msgstr "Makale bağlantılarındaki açılır pencereleri önizle"
 
 #: ../data/ui/prefs.ui:70
 msgid "Show a preview of the article when hovering over a link"
-msgstr "Bir bağlantının üzerine geldiğinde makalenin önizlemesini göster"
+msgstr "Bağlantının üzerine geldiğinde makalenin önizlemesini göster"
 
 #: ../data/ui/prefs.ui:89
 msgid "Privacy"
@@ -340,11 +341,11 @@ msgstr "Ara"
 
 #: ../data/ui/prefs.ui:98
 msgid "Allow live search on desktop"
-msgstr "Masaüstünde canlı arama yap"
+msgstr "Masaüstünde canlı arama yapmaya izin ver"
 
 #: ../data/ui/prefs.ui:99
 msgid "Warning: all desktop searches will be sent to Wikipedia"
-msgstr "Uyarı: tüm masaüstü aramaları Vikipedi'ye gönderilecek"
+msgstr "Uyarı: Tüm masaüstü aramaları Wikipedia'ya gönderilecek"
 
 #: ../data/ui/prefs.ui:123
 msgid "Personal Data"
@@ -384,7 +385,7 @@ msgstr "Makale ara"
 
 #: ../data/ui/header.ui:113
 msgid "Bookmarks"
-msgstr "Yerimleri"
+msgstr "Yer imleri"
 
 #: ../data/ui/header.ui:135
 msgid "Table of contents"
@@ -418,10 +419,10 @@ msgid "<b>No Bookmarks</b>\n"
 "<small>Use the <i>Add Bookmark</i> button\n"
 "or press Ctrl+D to add\n"
 "the current article to the list</small>"
-msgstr "<b>Yerimi Yok</b>\n"
+msgstr "<b>Yer İmi Yok</b>\n"
 "\n"
 "<small>Mevcut makaleyi listeye eklemek için\n"
-"<i>Yerimi Ekle</i> butonuna veya\n"
+"<i>Yer İmi Ekle</i> düğmesine veya\n"
 "Ctrl+D'ye basın</small>"
 
 #: ../data/ui/shortcuts.ui:96
@@ -437,7 +438,7 @@ msgstr "Yeni sekme"
 #: ../data/ui/shortcuts.ui:107
 msgctxt "shortcut window"
 msgid "Close current tab"
-msgstr "Şu anki sekmeyi kapat"
+msgstr "Geçerli sekmeyi kapat"
 
 #: ../data/ui/shortcuts.ui:114
 msgctxt "shortcut window"
@@ -455,7 +456,7 @@ msgstr "Yeni sekme"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:20
 msgid "Open multiple articles in tabs"
-msgstr "Çoklu sayfaları sekmelerde aç"
+msgstr "Birden fazla makaleyi sekmelerde aç"
 
 #: ../src/view.py:417
 msgid "Open Link in New Tab"
@@ -479,9 +480,9 @@ msgstr "Bağlantıyı Panoya Kopyala"
 
 #: ../data/ui/prefs.ui:110
 msgid "Desktop searches are performed in the default language"
-msgstr "Masaüstü aramaları varsayılan dilde gerçekleştirildi"
+msgstr "Masaüstü aramaları varsayılan dilde gerçekleştirilir"
 
 #: ../data/ui/prefs.ui:111
 msgid "You can search in other languages ​​using a prefix. Eg. -es to search in Spanish"
-msgstr "Ön ek kullanarak diğer dillerde arama yapabilirsiniz. Ör. Türkçe aramak için -tr"
+msgstr "Ön ek kullanarak diğer dillerde arama yapabilirsiniz. Ör. İngilizce aramak için -en kullanabilirsiniz"
 
